x.y.z
=====

Release date:

New features:

Bug fixes:

* Fix GitHub Issue #239: Cannot drag if the drag position is inside the virtual rectangle spanned by an edge

Other:

4.0.0
=====

Release date:

Fri, 10 Mar 2023 17:28:44 -0000

New features:

* Add setting for 'inverted controls'
  - Pan the view with a modifier key (Ctrl) and select a group of items without a modifier key being pressed

* Add parameter initialization options to layout optimization dialog

* Add progress indicator when opening a mind map

* Add tool tips for optimizer parameters

* Add tool tip text for selecting node group by intersection

* Change help texts into tool tips

Bug fixes:

* Fix tab key not working properly with node and edge text inputs

* Unselect implicitly selected node after context menu has closed

* Don't autosave unmodified mind map on exit

* Don't autosave unmodified mind map on new file or open file

Other:

* More subtle new version indicator with a timeout

* Change help texts to tool tips in edit settings

* Update Italian translations

* Update Dutch translations

* Breaking changes to ALZ-format (old files can still be opened normally)

  * Move style data into style element

  * Move layout optimizer config into metadata element

  * Save and load application and format versions separately

  * Rename index => i, index0 => i0, index1 => i1

3.7.0
=====

Release date:

Mon, 13 Feb 2023 19:21:18 -0000

New features:

* Add default settings for arrow size and edge width

* Add default settings for text size and font

* Add edit option to mirror the layout horizontally or vertically

* Animate edge deletion

* Animate node deletion

Bug fixes:

* Fix node left selected on canceled node/text color dialog

3.6.4
=====

Release date:

Mon, 19 Dec 2022 19:49:40 -0000

Bug fixes:

* Fix crash when trying to copy a group of connected nodes

Other:

* Update Italian translations

3.6.3
=====

Release date:

Sun, 11 Dec 2022 18:28:24 -0000

New features:
