@@ -72,7 +72,7 @@ Edge::Edge(NodeP sourceNode, NodeP targetNode, bool enableAnimations, bool enabl
 {
     setAcceptHoverEvents(true && enableAnimations);
 
-    setGraphicsEffect(GraphicsFactory::createDropShadowEffect(false, m_settingsProxy.shadowEffect()));
+    setGraphicsEffect(GraphicsFactory::createDropShadowEffect(m_settingsProxy.shadowEffect(), false));
 
     setZValue(static_cast<int>(Layers::Edge));
 
@@ -179,6 +179,12 @@ bool Edge::dashedLine() const
     return m_edgeModel->style.dashedLine;
 }
 
+void Edge::enableShadowEffect(bool enable)
+{
+    GraphicsFactory::updateDropShadowEffect(graphicsEffect(), m_settingsProxy.shadowEffect(), m_selected, !enable);
+    update();
+}
+
 double Edge::length() const
 {
     return m_line->line().length();
@@ -246,7 +252,7 @@ void Edge::setLabelVisible(bool visible, EdgeTextEdit::VisibilityChangeReason vc
             if (visible) {
                 m_label->setVisible(true);
                 m_label->setParentItem(nullptr);
-                m_label->setGraphicsEffect(GraphicsFactory::createDropShadowEffect(false, m_settingsProxy.shadowEffect()));
+                m_label->setGraphicsEffect(GraphicsFactory::createDropShadowEffect(m_settingsProxy.shadowEffect(), false));
                 m_dummyLabel->setVisible(false);
             }
         } break;
@@ -330,18 +336,18 @@ void Edge::setReversed(bool reversed)
 void Edge::setSelected(bool selected)
 {
     m_selected = selected;
-    GraphicsFactory::updateDropShadowEffect(graphicsEffect(), selected, m_settingsProxy.shadowEffect());
+    GraphicsFactory::updateDropShadowEffect(graphicsEffect(), m_settingsProxy.shadowEffect(), selected);
     if (m_label && m_label->parentItem() != this) {
-        GraphicsFactory::updateDropShadowEffect(m_label->graphicsEffect(), selected, m_settingsProxy.shadowEffect());
+        GraphicsFactory::updateDropShadowEffect(m_label->graphicsEffect(), m_settingsProxy.shadowEffect(), selected);
     }
     update();
 }
 
 void Edge::setShadowEffect(const ShadowEffectParams & params)
 {
-    GraphicsFactory::updateDropShadowEffect(graphicsEffect(), m_selected, params);
+    GraphicsFactory::updateDropShadowEffect(graphicsEffect(), params, m_selected);
     if (m_label && m_label->parentItem() != this) {
-        GraphicsFactory::updateDropShadowEffect(m_label->graphicsEffect(), m_selected, m_settingsProxy.shadowEffect());
+        GraphicsFactory::updateDropShadowEffect(m_label->graphicsEffect(), m_settingsProxy.shadowEffect(), m_selected);
     }
     update();
 }
